Delete unexpected symbols and extra spaces in words. Add memorizing a sentence/context. Fix alignment. Fix small bugs

--- a/extension/hover/hover.css
+++ b/extension/hover/hover.css
@@ -4,16 +4,14 @@
   outline: 1px solid #5166bb;
 }
 
-/*.tooltip {*/
-/*  background-color: darkgrey;*/
-/*}*/
+.tooltip {
+  z-index: 9999;
+}
 
 .tooltip .tooltiptext {
   visibility: hidden;
   width: 120px;
   font-size: 14px;
-  top: 0;
-  left: 0;
   margin-left: -60px;
   background-color: black;
   color: #fff;
@@ -22,8 +20,7 @@
   padding: 5px 0;
 
   /* Position the tooltip */
-  position: absolute;
-  z-index: 1;
+  position: fixed;
 }
 
 .tooltip:hover .tooltiptext {
